--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="AccentColor">#f1b814</color>
     <color name="text_light_blue">#ADD8E6</color>
     <color name="text_bg_blue">#1a242f</color>
+    <color name="player_bg">#000000</color>
 </resources>
