--- a/app/src/main/res/layout/activity_movie_player.xml
+++ b/app/src/main/res/layout/activity_movie_player.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/player_bg"
-    tools:context=".MoviePlayerActivity">
+    tools:context=".ui.MoviePlayerActivity">
 
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/movie_exo_player"
