--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -20,20 +20,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/detail_movie_cover"
             android:visibility="gone"/>
-        <TextView
-            android:id="@+id/txt_error"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/connection_problem"
-            app:layout_constraintBottom_toTopOf="@id/text_view_1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/detail_movie_cover"
-            android:visibility="gone"/>
 
         <ImageView
             android:id="@+id/detail_movie_cover"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="245dp"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +72,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="TextView"
+            tools:text="TextView"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/detail_movie_img"
@@ -110,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
-                android:text="@string/_8_10"
+                tools:text="@string/_8_10"
                 android:textColor="@color/white" />
         </LinearLayout>
 
@@ -135,7 +125,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
-                android:text="2016"
+                tools:text="2016"
                 android:textColor="@color/white" />
         </LinearLayout>
         <TextView
@@ -161,7 +151,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/simple_desciption"
+            tools:text="@string/simple_desciption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_view_1" />
