--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primaryColor"
-    tools:context=".ui.MovieDetailActivity">
+    tools:context=".view_model.detail.MovieDetailActivity">
     
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
