--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="primaryColor">#151c25</color>
     <color name="primaryColorDark">#151c25</color>
     <color name="AccentColor">#f1b814</color>
+    <color name="text_light_blue">#ADD8E6</color>
+    <color name="text_bg_blue">#1a242f</color>
+    <color name="player_bg">#000000</color>
+    <color name="lightgrey">#D3D3D3</color>
 </resources>
