--- a/app/src/main/res/anim/slide_out_left.xml
+++ b/app/src/main/res/anim/slide_out_left.xml
@@ -4,4 +4,9 @@
         android:fromXDelta="0%"
         android:toXDelta="-100%"
         android:duration = "@android:integer/config_mediumAnimTime"/>
+
+    <alpha
+        android:duration="@android:integer/config_mediumAnimTime"
+        android:fromAlpha="1.0"
+        android:toAlpha="0.0" />
 </set>
