--- a/app/src/main/res/layout/profile_image_layout.xml
+++ b/app/src/main/res/layout/profile_image_layout.xml
@@ -12,5 +12,6 @@
         android:layout_width="230dp"
         android:layout_height="230dp"
         android:layout_gravity="center"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:transitionName="image_transition"/>
 </androidx.cardview.widget.CardView>
