--- a/app/src/main/res/layout/credit_movie_layout.xml
+++ b/app/src/main/res/layout/credit_movie_layout.xml
@@ -27,7 +27,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/credit_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="36sp"
             android:layout_margin="10dp"
             android:layout_gravity="center"
             android:gravity="center"
@@ -45,7 +45,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/credit_character"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="38sp"
             android:layout_margin="10dp"
             android:layout_gravity="center"
             android:gravity="center"
