--- a/app/src/main/res/layout/activity_image_viewer.xml
+++ b/app/src/main/res/layout/activity_image_viewer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ImageViewerActivity"
-    android:background="#000">
+    android:background="@color/white">
 
     <com.jsibbold.zoomage.ZoomageView
         android:id="@+id/zoom_image_view"
