--- a/app/src/main/res/layout/video_item_layout.xml
+++ b/app/src/main/res/layout/video_item_layout.xml
@@ -28,6 +28,7 @@
             android:transitionName="video_transition"/>
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/video_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
